--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bamb",
   "version": "0.0.0",
-  "private": false,
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
