--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bamb",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://ofigurovskaya.github.io/bamb/",
   "type": "module",
   "scripts": {
     "dev": "vite",
